no banner for now

--- a/_posts/2016-12-20-cuely.md
+++ b/_posts/2016-12-20-cuely.md
@@ -6,7 +6,7 @@ description: Late 2016 I partnered with Jakob Marovt who at the time was running
 featured: true
 preview: false
 is_post: true
-banner: true
+banner: false
 cover: cuely--app/cuely--app--cover__timeline.png
 header: cuely--app/cuely--app--cover__post.png
 matters: Icon design, Product design, Design system
