--- a/_posts/2015-04-01-figure.md
+++ b/_posts/2015-04-01-figure.md
@@ -4,7 +4,7 @@ date: 2015-04-01 00:00:00 Z
 description: Figure helps freelancers manage their economy and adopt healthier financial
   habits.
 featured: false
-preview: false
+preview: true
 is_post: true
 cover: figure--app/figure--app--cover__timeline.png
 header: figure--app/figure--app--cover__post.png
