--- a/_posts/2016-12-20-cuely.md
+++ b/_posts/2016-12-20-cuely.md
@@ -3,8 +3,8 @@ title: Cuely app
 date: 2016-12-20 00:00:00 Z
 description: Late 2016 I partnered with Jakob Marovt who at the time was running Cuely
   to work within 2 weeks on the look and feel of their desktop app.
-featured: true
-preview: false
+featured: false
+preview: true
 is_post: true
 banner: false
 cover: cuely--app/cuely--app--cover__timeline.png
