build banner and file names

--- a/_drafts/2016-12-20-cuely.md
+++ b/_drafts/2016-12-20-cuely.md
@@ -1,20 +1,18 @@
 ---
 title: Cuely app
 date: 2016-12-20 00:00:00 Z
-description: Late 2016 I partnered with Jakob Marovt who at the time was running Cuely
-  to work within 2 weeks on the look and feel of their desktop app.
+description: Late 2016 I partnered with Jakob Marovt who at the time was running Cuely to work within 2 weeks on the look and feel of their desktop app.
 featured: false
 preview: true
 is_post: true
 banner: false
 cover: cuely--app/cuely--app--cover__timeline.png
 header: cuely--app/cuely--app--cover__post.png
-matters: Icon design, Product design, Design system
+matters: Product design, Design system, Icon design
 period: 2016
 external: false
 link: https://cuely.co
 ---
-
 Late 2016 I partnered with Jakob Marovt who at the time was running Cuely.
 <br><br>
 The app is meant to replace your metasearch on different operating system. Connected to all your favorite apps, Cuely helps you reach your documents, conversations and information quickly.
@@ -27,5 +25,3 @@ I took some time to give his app a bit of personality to stand out.
 <img class="portrait" src="../../assets/images/posts/cuely--app/cuely--app--content--2.png">
 
 The team and service couldn't find their audience, and the app was shutdown.
-<br><br>
-So long Cuely.
