--- a/_posts/1988-01-01-profile.md
+++ b/_posts/1988-01-01-profile.md
@@ -6,13 +6,13 @@ description: Learn a bit more about me
 featured: false
 preview: false
 is_post: true
-banner: false
+banner: true
 cover: profil-alt.jpg
-header: 
-matters: 
-period: 
+header:
+matters:
+period:
 external: false
-link: 
+link:
 ---
 
 Currently working at [Founders](https://founders.as) as product designer, I help the core team and some of the portfolio companies with their design challenges.
