--- a/_posts/2015-04-01-figure.md
+++ b/_posts/2015-04-01-figure.md
@@ -1,11 +1,11 @@
 ---
 title: A Bank app for freelancer
 date: 2015-04-01 00:00:00 Z
-description: Figure helps freelancers manage their economy and adopt healthier financial
-  habits.
+description: Figure helps freelancers manage their economy and adopt healthier financial habits.
 featured: false
 preview: true
 is_post: true
+banner: false
 cover: figure--app/figure--app--cover__timeline.png
 header: figure--app/figure--app--cover__post.png
 matters: Product design, Prototyping
