--- a/_posts/1988-01-01-profile.md
+++ b/_posts/1988-01-01-profile.md
@@ -15,10 +15,10 @@ external: false
 link:
 ---
 
-Currently working at [Founders](https://founders.as) as product designer, I help the core team and some of the portfolio companies with their design challenges.
+Currently working with [Founders](https://founders.as) as product designer, I help the core team and some of the portfolio companies with their design challenges.
 <br><br>
-I like to think big, but I'm pragmatic in my day to day work and can take fast decisions on what needs to be done short term.
+I like to think big, but I’m pragmatic in my day-to-day work and can take fast decisions on what needs to be done in the short term.
 <br><br>
-While interface design is the core of my expertise, experience in front-end development, branding round out my approach. I have experience managing creative processes and stakeholders, self-motivated but able to adapt to different team setups.
+While interface design is the core of my expertise, experience in front-end development and branding round out my perspective. I have experience managing multi-stakeholder creative processes and am self-motivated but able to adapt to different team structures. 
 <br><br>
 Based in {{ site.local }}.
