--- a/_posts/2015-04-01-figure.md
+++ b/_posts/2015-04-01-figure.md
@@ -1,5 +1,5 @@
 ---
-title: A Bank app for freelancer
+title: Figure prototype, a bank service for freelancer
 date: 2015-04-01 00:00:00 Z
 description: Figure helps freelancers manage their economy and adopt healthier financial habits.
 featured: false
@@ -14,32 +14,31 @@ external: false
 link: https://denismoulin.com/h/figure/
 ---
 
-## It should be as easy working for yourself as being employed
+## It should be as easy to work for yourself as it is to be employed
 
-That's how we started to talk about frustrations of Freelancers'life at Founders. Many of us at that time already experienced some time as freelancers and we were stumbling around the same frustrations.
+That’s how we started to talk about the frustrations of freelancing life at Founders. Many of us had struggled with the same around the same challenges in our time as freelancers.
 
 ### Figure App
 
-As part of our exploration process, we went through rounds of interviews with freelancers, demos of prototypes around different features/ideas.
-Here's a couple of ideas we kept:
+As part of our exploration process, we went through rounds of interviews with freelancers, creating demos of prototypes around different features and ideas. Here are a few ideas we kept:
 
 - We eliminate the complexity of creating a bank account by connecting to your existing business account (where you get paid)
 - We help individuals stay financially afloat by putting aside taxes and VAT money from income
-- Business expenses tracking is vital, so let's make it easy.
-- Life isn't just work and pay your taxes so we help individuals set some money aside with simple savings.
+- Business expense tracking is vital, so let’s make it easy
+- Life isn’t just working and paying your taxes, so we help individuals to set some money aside with simple savings
 
 
 ![](../../assets/images/posts/figure--app/figure--app--content--1.png)
 
 ###### Connecting your business account to Figure
 
-We separate business and personal bank account. Signed up user connects his Business bank account where he receives his freelancer income.
+We separate business and personal bank accounts. Registered users connect the bank account that receives freelancer income to the Figure app.
 
 ![](../../assets/images/posts/figure--app/figure--app--content--2.png)
 
 ###### Connecting your business account to Figure
 
-A system of actions card help the user get onboarded, setup his automated taxes and VAT or extra savings account.
+A series of action cards help the user get onboarded, set up automated taxes and VAT payments or an extra savings account.
 
 ![](../../assets/images/posts/figure--app/figure--app--content--3.png)
 
@@ -51,23 +50,15 @@ A system of actions card help the user get onboarded, setup his automated taxes 
 
 <img class="portrait" src="../../assets/images/posts/figure--app/figure--app--content--5.png">
 
-The dashboard is the principale view on Figure but each "account" (Business/Taxes/Savings) use the same layout and same transactions list so .
+The dashboard is the principal view in the Figure app but each “account” (e.g. Business/Taxes/Savings) use the same layout and same transactions list.
 
 ![](../../assets/images/posts/figure--app/figure--app--content--6.png)
 
-Each transaction can be edited and generated automation, as shown below by categorizing this expense at the appropriate VAT business expense, Figure will transfer a positive amount from your VAT account to your Business account.
+Each transaction can be edited to generate automation, as shown below. By categorizing this expense as the appropriate VAT business expense, Figure will transfer a positive amount from your VAT account to your Business account.
 
 ![](../../assets/images/posts/figure--app/figure--app--content--7.png)
 
 
-### Couple months later
+### A few months later
 
-Figure app/prototype has generated enough interests to the different stakeholder that we pursued building the first prototype and hand it over to a dedicated who's running it under the name of [Kontist](https://kontist.com/en).
-
-
-##### I was in charge of
-- Creating and versioning first interface prototype and brand
-- Iterating on concept and solutions
-- Building invision demos
-- Building first design system and interface and collaborate with dev team
-- Onboard dedicated team and designer
+The Figure app/prototype generated enough interest with different stakeholder groups for us to pursue building the first prototype. We’ve since handed it over to a dedicated team that is now running the company under the name of [Kontist](https://kontist.com/en).
