--- a/_posts/2016-05-03-duuoo-app.md
+++ b/_posts/2016-05-03-duuoo-app.md
@@ -29,3 +29,11 @@ I helped the team build their first app and landing page. Finding ways to optimi
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--4.png)
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--5.png)
+
+![](../../assets/images/posts/duuoo--app/duuoo--app--content--6.png)
+
+![](../../assets/images/posts/duuoo--app/duuoo--app--content--7.png)
+
+![](../../assets/images/posts/duuoo--app/duuoo--app--content--8.png)
+
+![](../../assets/images/posts/duuoo--app/duuoo--app--content--9.png)
