--- a/_posts/1988-01-01-profile.md
+++ b/_posts/1988-01-01-profile.md
@@ -1,8 +1,8 @@
 ---
-title: My name is Denis
+title: About page
 date: 1988-01-01 00:00:00 Z
 layout: profile
-description: Learn a bit more about me
+description: As much as I try to publish my work most of it isn't available here. Learn more about where I worked and what I did for the past few years.
 featured: false
 preview: false
 is_post: true
