--- a/_posts/2015-03-01-dixie-app.md
+++ b/_posts/2015-03-01-dixie-app.md
@@ -1,5 +1,5 @@
 ---
-title: Dixie.io, Customer and Bookkeeper App
+title: Dixie.io Customer and Bookkeeper App
 date: 2015-10-01 00:00:00 Z
 description: Dixie challenges the way the back office works. By taking care of the tedious tasks and providing actionable insights.
 featured: false
