--- a/_posts/2015-03-01-dixie-app.md
+++ b/_posts/2015-03-01-dixie-app.md
@@ -21,30 +21,36 @@ I helped the team develop their product and tools, build both the customer and t
 
 ### Customer App
 
-What is the customer app doing
+Main goal of the app is to help customers and companies stay on top of their bookkeeping, get actionable insights on most important tasks or documents missing.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--0.png)
-
+###### A clear dashboard help customer focus on what's important at the moment to keep company books clean and running.
 ![](../../assets/images/posts/dixie--app/dixie--app--content--1.png)
-
-![](../../assets/images/posts/dixie--app/dixie--app--content--2.png)
+###### Assigning tasks or receipts to co-workers is a good way to streamline and accelerate the collect of receipt.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--3.png)
-
+###### Any documents can be uploaded to dixie and directly transferred to company's bookkeeper. 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--4.png)
 
 ### Bookkeeper App
 
-What is the Bookeeper app doing
+The Bookkeeper App helps the team behind Dixie streamline work and documents sent by customers to the bookkeeping force. 
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--5.png)
+###### A clear dashboard help prioritize bookkeepers'work for each company.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--6.png)
+###### Each company has a set of task that can be assigned to different bookkeepers. Bookkeepers can filter tasks to find the most urgent or needed one and manage company's tasks.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--7.png)
+###### Bookkeeper can create single or recurring task for the company. 
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--8.png)
 
+###### The transaction matcher is one key element of Dixie's Bookkeeper App as it's where bookkeeper takers over most of client's uploads and match them to current missing receipts. 
+
 ![](../../assets/images/posts/dixie--app/dixie--app--content--9.png)
+
+###### Bookkeepers have generally a better understanding on where to look to match receipts to uploads, in the last resort they can ask the client directly on the missing receipts chat. The client on the other side would view the same information and exchange with the bookkeeper the same way.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--10.png)
