--- a/_posts/2016-05-03-duuoo-app.md
+++ b/_posts/2016-05-03-duuoo-app.md
@@ -20,20 +20,34 @@ I helped the team build their first app and landing page. Finding ways to optimi
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--0.png)
 
+###### Slack and Duuoo works hand in hands, so you can choose who to onboard seamlesssly and don't have to worry about missed communication between co-workers.
+
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--1.png)
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--2.png)
 
+###### Managers are the core audience of Duuoo, there're part of the management problem and solution.
+
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--3.png)
+
+###### On Duuoo managers run 1-to-1 (or 1-on-1) with each member of their team. For each 1-to-1 managers get a set of questions wrote by Duuoo team that they can send to employee.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--4.png)
 
+###### Couple days before their 1-to-1, employees and managers can prepare their meeting by reviewing employees'answers.
+
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--5.png)
 
+###### Each 1-to-1 starts with a review of their past 1-to-1 agreements. Once reviewed agreements can be checked off or kept for next review.
+
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--6.png)
+
+###### While seating in the same room or same call, both parties review questions and answers. They can add mutual or individual agreements.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--7.png)
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--8.png)
+
+###### Once completed, !-to-1 ends up with both parties scheduling their next session.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--9.png)
