--- a/_posts/2015-03-01-dixie-app.md
+++ b/_posts/2015-03-01-dixie-app.md
@@ -1,7 +1,7 @@
 ---
 title: Dixie.io Customer and Bookkeeper App
 date: 2015-10-01 00:00:00 Z
-description: Dixie challenges the way the back office works. By taking care of the tedious tasks and providing actionable insights.
+description: Dixie makes it easy to turn your company's back office from a burden into a highly valuable set of data and tools.
 featured: false
 preview: true
 is_post: true
@@ -13,44 +13,46 @@ period: 2015 - 2017
 external: false
 link: https://denismoulin.com/h/dixie/2017
 ---
-Dixie is a personal back office service for your business.
+Dixie is a personal back-office service for your business.
 
-Combining actionable insights and easy access to expert bookkeepers, it's easier to turn company's back office from a burden into something valuable.
+Combining actionable insights with easy access to expert bookkeepers, Dixie makes it easy to turn your company's back office from a burden into a highly valuable set of data and tools.
 
-I helped the team develop their product and tools, build both the customer and the bookkeeper app.
+I helped the team to develop their product and tools, building both the customer- and the bookkeeper-facing app.
 
 ### Customer App
 
-Main goal of the app is to help customers and companies stay on top of their bookkeeping, get actionable insights on most important tasks or documents missing.
+The main goal of the app is to help customers and companies stay on top of their bookkeeping by providing actionable insights around the most critical outstanding tasks or missing documents.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--0.png)
-###### A clear dashboard help customer focus on what's important at the moment to keep company books clean and running.
+###### A clear dashboard helps customers focus on what's important at the moment to keep their company’s books clean and running smoothly.
+
 ![](../../assets/images/posts/dixie--app/dixie--app--content--1.png)
-###### Assigning tasks or receipts to co-workers is a good way to streamline and accelerate the collect of receipt.
+###### Assigning tasks or receipts to co-workers is a good way to streamline and accelerate the collection of receipts.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--3.png)
-###### Any documents can be uploaded to dixie and directly transferred to company's bookkeeper. 
+###### All documents can be uploaded to Dixie and directly transferred to the company's bookkeeper.
+
 ![](../../assets/images/posts/dixie--app/dixie--app--content--4.png)
 
 ### Bookkeeper App
 
-The Bookkeeper App helps the team behind Dixie streamline work and documents sent by customers to the bookkeeping force. 
+The Bookkeeper App helps the team behind Dixie to streamline work and documents sent by customers to the bookkeeping force.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--5.png)
-###### A clear dashboard help prioritize bookkeepers'work for each company.
+###### A clear dashboard helps to prioritize the bookkeepers' work for each company.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--6.png)
-###### Each company has a set of task that can be assigned to different bookkeepers. Bookkeepers can filter tasks to find the most urgent or needed one and manage company's tasks.
+###### Each company has a set of tasks that can be assigned to different bookkeepers. Bookkeepers can filter and manage a company’s tasks to identify its most urgent needs.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--7.png)
-###### Bookkeeper can create single or recurring task for the company. 
+###### Bookkeepers can create one-time or recurring tasks for each company.  
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--8.png)
 
-###### The transaction matcher is one key element of Dixie's Bookkeeper App as it's where bookkeeper takers over most of client's uploads and match them to current missing receipts. 
+###### The transaction matcher is a key element of Dixie's Bookkeeper App. This is where a bookkeeper takes over most of the client's uploads and matches them to current missing receipts.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--9.png)
 
-###### Bookkeepers have generally a better understanding on where to look to match receipts to uploads, in the last resort they can ask the client directly on the missing receipts chat. The client on the other side would view the same information and exchange with the bookkeeper the same way.
+###### Bookkeepers generally have a clear understanding of where to look to match receipts to uploads. As a last resort, they can ask the client directly using the missing receipts chat. On the other side, the client would view the same information and exchange with the bookkeeper in the same way.
 
 ![](../../assets/images/posts/dixie--app/dixie--app--content--10.png)
