--- a/_posts/2016-05-03-duuoo-app.md
+++ b/_posts/2016-05-03-duuoo-app.md
@@ -1,7 +1,7 @@
 ---
 title: Duuoo app
 date: 2016-05-03 00:00:00 Z
-description: Duuoo is a one-on-one meeting tool which improves the relationship between managers and team members.
+description: Duuoo is a one-on-one meeting tool that improves relationships between managers and team members.
 featured: false
 preview: true
 is_post: true
@@ -14,40 +14,42 @@ external: false
 link: https://moulindenis.github.io/duuoo-website/
 ---
 
-Duuoo is a one-on-one meeting tool which improves the relationship between managers and team members.
+Duuoo is a one-on-one meeting tool that improves relationships between managers and team members.
 
-I helped the team build their first app and landing page. Finding ways to optimize the entire process involved in each 1-on-1. From planning meetings, curating talking points, setting agendas, providing insights about employee needs and driving high accountability - so you never lose track and always stay on top of things with your team.
+I helped the team to build their first app and landing page, finding ways to optimize the entire process involved in each 1-on-1. From planning meetings to curating talking points, setting agendas, providing insights about employee needs and driving high accountability, Duuoo ensures that managers never lose track and always stay on top of their team’s operations.
+
+Further, Duuoo enables a level of communication that goes beyond day-to-day operational concerns, building trust and understanding between team members and their managers.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--0.png)
 
-###### Slack and Duuoo works hand in hands, so you can choose who to onboard seamlesssly and don't have to worry about missed communication between co-workers.
+###### Slack and Duuoo work hand-in-hand, so you can onboard seamlessly and avoid missed communication between co-workers.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--1.png)
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--2.png)
 
-###### Managers are the core audience of Duuoo, there're part of the management problem and solution.
+###### Managers are the core audience of Duuoo, as they are part of both management problems and their solutions.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--3.png)
 
-###### On Duuoo managers run 1-to-1 (or 1-on-1) with each member of their team. For each 1-to-1 managers get a set of questions wrote by Duuoo team that they can send to employee.
+###### With Duuoo, managers run 1-on-1 meetings with each member of their team. For each 1-on-1, managers receive a set of meeting preparation questions written by the Duuoo team that they can edit and forward to team members.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--4.png)
 
-###### Couple days before their 1-to-1, employees and managers can prepare their meeting by reviewing employees'answers.
+###### A few days before their 1-on-1, team members and managers can prepare for their meeting by reviewing the team member’s responses.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--5.png)
 
-###### Each 1-to-1 starts with a review of their past 1-to-1 agreements. Once reviewed agreements can be checked off or kept for next review.
+###### Each 1-on-1 starts with a review of past 1-on-1 agreements. Once reviewed, agreements can be checked off or retained for the next review.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--6.png)
 
-###### While seating in the same room or same call, both parties review questions and answers. They can add mutual or individual agreements.
+###### While seated in the same room or virtually on the same call, both parties review questions and answers. They can then add new mutual or individual agreements.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--7.png)
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--8.png)
 
-###### Once completed, !-to-1 ends up with both parties scheduling their next session.
+###### Once the conversation is complete, the 1-on-1 concludes with both parties scheduling their next session.
 
 ![](../../assets/images/posts/duuoo--app/duuoo--app--content--9.png)
