--- a/_posts/1988-01-01-profile.md
+++ b/_posts/1988-01-01-profile.md
@@ -2,7 +2,7 @@
 title: About page
 date: 1988-01-01 00:00:00 Z
 layout: profile
-description: As much as I try to publish my work most of it isn't available here. Learn more about where I worked and what I did for the past few years.
+description: As much as I try to publish my work, most of it isn't on view here. Learn more about where I’ve worked and what I’ve been up to for the past few years.
 featured: false
 preview: false
 is_post: true
