--- a/_posts/1988-01-01-profile.md
+++ b/_posts/1988-01-01-profile.md
@@ -15,7 +15,7 @@ external: false
 link:
 ---
 
-Currently working with [Founders](https://founders.as) as product designer, I help the core team and some of the portfolio companies with their design challenges.
+Currently working with [Breather](https://breather.com) as product designer.
 <br><br>
 I like to think big, but I’m pragmatic in my day-to-day work and can take fast decisions on what needs to be done in the short term.
 <br><br>
