--- a/_posts/1988-01-01-profile.md
+++ b/_posts/1988-01-01-profile.md
@@ -6,7 +6,7 @@ description: As much as I try to publish my work, most of it isn't on view here.
 featured: false
 preview: false
 is_post: true
-banner: true
+banner: false
 cover: profil-alt.jpg
 header:
 matters:
